# sshive

./: Cargo.toml  LICENSE  README.md  aws-ec2-t4g-small.pem
src/: cli.rs  config.rs  logger.rs  main.rs
src/commands/: connect.rs
